<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <ImageView
        android:id="@+id/imgAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="659dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_bias="130" />

    <TextView
        android:id="@+id/appTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="gravity"
        android:padding="6dp"
        android:background="@drawable/rounded_grey_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAppIcon" />

    <TextView
        android:id="@+id/txtPermissionDes"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/appTittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="16sp"
        android:padding="9dp"
        android:gravity="start"
        android:textAlignment="gravity"
        android:text="@string/permission_describtion"
        android:textColor="@color/white"
        android:background="@drawable/rounded_grey_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtAgree"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="36dp"
        android:textSize="16sp"
        android:padding="9dp"
        android:gravity="start"
        android:textAlignment="gravity"
        android:text="@string/i_understand"
        android:textColor="@color/white"
        android:background="@drawable/rounded_grey_bg_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="90dp" />
<androidx.core.widget.ContentLoadingProgressBar
    android:id="@+id/progressBar"
    android:visibility="gone"
    style="@style/Widget.AppCompat.ProgressBar"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>